Project apache kafka link uploaded

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                       <p>Api Rest</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#graphic-design">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://github.com/CarlosTontaquimba/KafkaSpring">
                 <figure class="cc-effect"><img src="images/graphic-design-3.jpg" alt="Image"/>
                   <figcaption>
                     <div class="h4">Apache Kafka with Spring Boot</div>
